# qalarm

./: .gitignore  AlarmDialog.qml  AlarmModel.qml  CMakeLists.txt  README.md  TumblerDelegate.qml  alarm.pro  debug_cmake.sh  debug_run.sh  install_android.sh  install_cmake.sh  main.qml  qml.qrc  qtquickcontrols2.conf
android/: AddQtAndroidApk.cmake
plugin/: CMakeLists.txt  plugin.pro
plugin/JsonSettings/: CMakeLists.txt  json-settings-qml.pro  json-settings.pri  jsonglobalsettings.cpp  jsonglobalsettings.h  jsonsettings_plugin.cpp  jsonsettings_plugin.h  jsonsettingsfile.cpp  jsonsettingsfile.h  qmldir
plugin/TimeService/: CMakeLists.txt  minute_timer.h  plugin.h  plugin.pro  qmldir  time_service.cpp  time_service.h
plugin/Util/: CMakeLists.txt  plugin.pro  qmldir  util.cpp  util.h  util.pro  util_plugin.h
plugin/fileio/: CMakeLists.txt  qmldir
res/: qml.qrc
src/: main.cpp  qml.qrc  qtquickcontrols2.conf
src/qml/: AlarmDelegate.qml  AlarmDialog.qml  AlarmModel.qml  Config.qml  Defaults.txt  JsonListModel.qml  Storage.js  Style.qml  Theme.qml  Theme1.qml  main.qml  qml.qrc  qmldir  qtquickcontrols2.conf
src/qml/Style/: Style.qml  Theme.qml  ThemeDark.qml  ThemeLight.qml
